--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Anaheim|Indie+Flower');
 @import "bootstrap";
 
 .clear {
@@ -46,4 +47,12 @@ header {
 
 hr {
   clear:both;
+}
+
+h1 {
+  font-family: 'Indie Flower', cursive;
+}
+
+h2 {
+  font-family: 'Anaheim', sans-serif;
 }
