--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -29,6 +29,7 @@
   font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
   font-style: italic;
   padding-top: 26px;
+  font-size: 25px;
 }
 
 .links {
@@ -55,4 +56,17 @@ h1 {
 
 h2 {
   font-family: 'Anaheim', sans-serif;
+}
+
+.next-quote {
+  color:#f84342;
+  font-family: 'Anaheim', sans-serif;
+  font-size:20px;
+}
+
+.footer-blurb {
+  font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+  font-style: italic;
+  text-align: right;
+  font-size: 10px;
 }
