--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="col-4 slogan">
-        Splurting out unsolicited advice about tennis since 2018
+        Splurting out unsolicited tennis advice since 2018
       </div>
       <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
@@ -33,6 +33,22 @@
 
     <br class="clear" />
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+          <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+          </div>
+          <div class="col-6 footer-blurb">
+            Proudly hacked in Bellevue, WA by Phil Gerity
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
