--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,22 @@
   <body>
     <header class="row">
       <div class="col-3">
-        <div class="circle">
-        <br />
-        You know
-        <br />
-        You need a
-        <br />
-        Lesson when
-        </div>
+        <%= link_to root_path, class: 'logo' do %>
+          <div class="circle">
+            <br />
+            You know
+            <br />
+            You need a
+            <br />
+            Lesson when
+          </div>
+        <% end %>
       </div>
       <div class="col-4 slogan">
         Splurting out unsolicited tennis advice since 2018
       </div>
       <div class="col-5 links">
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
@@ -41,7 +43,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-          <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+            <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
           <div class="col-6 footer-blurb">
             Proudly hacked in Bellevue, WA by Phil Gerity
